test/Fail/AbsurdPatternNotUnused.err
AbsurdPatternNotUnused.agda:15.12-16: error: [UnequalTerms]
x != y of type ⊥
when checking that the expression refl has type
abort Bool x ≡ abort Bool y
